log regression + random forest / comparison

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -1,8 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d443ea68",
+   "metadata": {},
+   "source": [
+    "- Problem Statement: We aim to predict customer attrition (churn) for ABC Bank. In banking, retaining a customer is 5-7 times cheaper than acquiring a new one. Our goal is to identify high-risk customers before they leave.\n",
+    "\n",
+    "- Solution Approach: We handled data imbalance using SMOTE. We engineered 4 domain-specific features. We compared a baseline Logistic Regression with more complex models (RF, SVM, KNN) using Stratified Cross-Validation to ensure robustness.\n",
+    "\n",
+    "- Key Insight: While Random Forest is the most accurate, SVM offers the best Recall. From a business perspective, Recall is our priority because we want to capture as many potential churners as possible, even at the cost of some false alarms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3289b481",
+   "metadata": {},
+   "source": [
+    "Predicting customer churn is a classic binary classification problem in finance. Our target variable is 'churn' (1 for left, 0 for stayed)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7e41aec9",
    "metadata": {},
    "outputs": [
@@ -298,7 +318,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from pathlib import Path\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
@@ -750,6 +769,14 @@
    "metadata": {},
    "source": [
     "### Key Insights Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4a0b257",
+   "metadata": {},
+   "source": [
+    "We observe a class imbalance (20.37% churners). This requires special handling during preprocessing, as standard models might be biased towards the majority class"
    ]
   },
   {
