--- a/notebooks/02_preprocessing.ipynb
+++ b/notebooks/02_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "73147fc2",
    "metadata": {},
    "outputs": [
@@ -12,21 +12,19 @@
        "(10000, 11)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from pathlib import Path\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-    "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "477e93e4",
    "metadata": {},
    "outputs": [
@@ -140,7 +138,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "c31d6913-3a31-4e72-a573-4568058faf20",
+       "ref": "6ab7b31a-6226-4fd5-abb0-449b70ce42d2",
        "rows": [
         [
          "0",
@@ -352,7 +350,7 @@
        "4              1          79084.10      0            False           True  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,6 +384,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "759c015e",
+   "metadata": {},
+   "source": [
+    "Feature Engineering: We created new indicators like 'balance_per_product' and 'tenure_age_ratio' to capture non-linear relationships that might drive a customer's decision to leave"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e450c6f4",
    "metadata": {},
    "source": [
@@ -394,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "01493eaa",
    "metadata": {},
    "outputs": [
@@ -451,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "10d7e281",
    "metadata": {},
    "outputs": [
@@ -496,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "cd31ced7",
    "metadata": {},
    "outputs": [
@@ -562,8 +568,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15e2cfd1",
+   "metadata": {},
+   "source": [
+    "Preprocessing Strategy: We use StandardScaler because distance-based models (like KNN/SVM) and Logistic Regression are sensitive to the scale of features. SMOTE will be used to balance the training set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "f57ed55a",
    "metadata": {},
    "outputs": [
@@ -622,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "2a23ede1",
    "metadata": {},
    "outputs": [
