--- a/notebooks/04_final_comparison.ipynb
+++ b/notebooks/04_final_comparison.ipynb
@@ -173,6 +173,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d2ed8de",
+   "metadata": {},
+   "source": [
+    "Best Overall Model: **Random Forest**\n",
+    " \n",
+    " **Performance Metrics:**\n",
+    " - **ROC-AUC: 0.8617** (highest - best discriminative ability)\n",
+    " - **Accuracy: 0.8260** (correctly classifies 82.6% of customers)\n",
+    " - **F1-Score: 0.6209** (best balance between precision and recall)\n",
+    " - **Improvement over baseline: +11.27%**\n",
+    " \n",
+    " **Why Random Forest wins:**\n",
+    " - Captures non-linear relationships (age, balance interactions)\n",
+    " - Robust to outliers and noise\n",
+    " - Ensemble of 100 trees reduces overfitting\n",
+    " - Handles feature interactions automatically"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "82a93306",
    "metadata": {},
    "source": [
@@ -237,6 +257,24 @@
     "for model_name, data in models_data.items():\n",
     "    auc = roc_auc_score(data['y_test'], data['y_proba'])\n",
     "    print(f\"  • {model_name:20s}: {auc:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "567442d2",
+   "metadata": {},
+   "source": [
+    "**ROC Curve Analysis**\n",
+    " \n",
+    " **What the curves show:**\n",
+    " - **Random Forest & SVM:** Very close performance (curves overlap)\n",
+    " - **KNN & Logistic Regression:** Good, but noticeably worse\n",
+    " - **All models:** Significantly better than random (diagonal line)\n",
+    " \n",
+    " **Area Under Curve (AUC) interpretation:**\n",
+    " - **0.8617 (RF):** 86.17% chance model ranks random churner > random non-churner\n",
+    " - **0.7744 (LR):** 77.44% chance (baseline)\n",
+    " - **Improvement:** RF gives +8.73 percentage points better discrimination"
    ]
   },
   {
@@ -315,6 +353,31 @@
     "    print(f\"\\n{model_name}:\")\n",
     "    print(f\"  TN: {cm[0,0]:4d}  |  FP: {cm[0,1]:4d}\")\n",
     "    print(f\"  FN: {cm[1,0]:4d}  |  TP: {cm[1,1]:4d}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1663210f",
+   "metadata": {},
+   "source": [
+    "**Confusion Matrix Insights**\n",
+    " \n",
+    " **Random Forest (Best Model):**\n",
+    " - True Negatives:  1367 (correctly predicted \"not churn\")\n",
+    " - False Positives:  226 (predicted churn, but stayed)\n",
+    " - False Negatives:  122 (missed churners - COSTLY!)\n",
+    " - True Positives:   285 (correctly caught churners)\n",
+    " \n",
+    " **Business Impact:**\n",
+    " - **1367 customers:** No action needed (correctly stable)\n",
+    " - **226 customers:** Get retention offer (low cost)\n",
+    " - **285 customers:** Successfully prevented churn (high value!)\n",
+    " - **122 customers:** Lost (need to minimize this)\n",
+    " \n",
+    " **SVM (Best Recall):**\n",
+    " - Catches **307 churners** (vs RF's 285)\n",
+    " - But has **304 false positives** (vs RF's 226)\n",
+    " - Trade-off: More churners caught, but more unnecessary campaigns"
    ]
   },
   {
@@ -439,6 +502,36 @@
     "        improvement = (row['ROC-AUC'] - lr_roc) / lr_roc * 100\n",
     "        symbol = \"↑\" if improvement > 0 else \"↓\"\n",
     "        print(f\"  • {row['Model']:20s}: {symbol} {abs(improvement):.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9af3c7f6",
+   "metadata": {},
+   "source": [
+    "**Business Recommendations**\n",
+    "**Primary Choice: Random Forest**\n",
+    " - Best overall performance (ROC-AUC: 0.8617)\n",
+    " - Balanced precision/recall trade-off\n",
+    " - Stable and robust predictions\n",
+    " - Feature importance for business insights\n",
+    "\n",
+    "**Alternative Strategies:**\n",
+    " \n",
+    " **1. High-Risk Tolerance (maximize churner detection):**\n",
+    " - Use **SVM** (Recall: 0.7543)\n",
+    " - Accepts more false positives\n",
+    " - Good when retention campaigns are cheap\n",
+    " \n",
+    " **2. Low-Risk Tolerance (minimize false alarms):**\n",
+    " - Use **Random Forest** with higher threshold\n",
+    " - Reduces false positives\n",
+    " - Only target high-confidence churners\n",
+    " \n",
+    " **3. Ensemble Approach (best of both worlds):**\n",
+    " - Combine RF + SVM predictions\n",
+    " - If either predicts churn → flag for review\n",
+    " - Human decision on borderline cases"
    ]
   }
  ],
